feat: MSA 폴더구조 수정
- 폴더구조 수정

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
 rootProject.name = 'toyproject-msa'
-include 'msa-service-core', 'msa-service-eureka', 'msa-service-gateway', 'msa-service-user'
+include 'msa-service-core'
+include 'msa-service-discovery'
+include 'msa-service-gateway'
+include 'msa-service-user'
+
