--- a/msa-service-core/build.gradle
+++ b/msa-service-core/build.gradle
@@ -1,4 +1,11 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+
+test {
+    useJUnitPlatform()
 }
