--- a/msa-service-catalog/src/main/resources/application.yml
+++ b/msa-service-catalog/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   application:
-    name: msa-service-user
+    name: msa-service-catalog
   h2:
     console:
       enabled: true
@@ -13,7 +13,6 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
-
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -31,5 +30,6 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
 
-greeting:
-  message: Welcome to the Simple E-commerce.
+logging:
+  level:
+    com.prj.catalog: DEBUG
