--- a/msa-service-user/src/main/resources/application.yml
+++ b/msa-service-user/src/main/resources/application.yml
@@ -33,3 +33,8 @@ eureka:
 
 greeting:
   message: Welcome to the Simple E-commerce.
+
+token:
+  expiration_time: 86400000 #1?
+  secret: user_token
+
