feat: Config Server적용
- Config Server적용

--- a/msa-service-discovery/build.gradle
+++ b/msa-service-discovery/build.gradle
@@ -3,8 +3,14 @@ ext {
 }
 
 dependencies {
+//  # Spring Cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+
+//  # ETC
+    implementation 'org.modelmapper:modelmapper:2.4.4'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
