--- a/msa-service-core/build.gradle
+++ b/msa-service-core/build.gradle
@@ -2,11 +2,12 @@ dependencies {
 //  # Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 //  # Spring Cloud
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 //  # Spring JPA 및 DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
