--- a/msa-service-discovery/src/main/resources/application.yml
+++ b/msa-service-discovery/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
 
   eureka:
     client:
-      enabled: false  # Eureka ???? ????? ?? ????
+      enabled: false
     server:
-      enableSelfPreservation: false  # ???? false? ???? ????? ????? ?????.
+      enableSelfPreservation: false
