--- a/msa-service-user/src/main/resources/bootstrap.yml
+++ b/msa-service-user/src/main/resources/bootstrap.yml
@@ -1,6 +1,9 @@
 spring:
+  profiles:
+    active: local
   cloud:
     config:
       uri: http://127.0.0.1:8888
       name: msa-service-user
-#      active: dev
+    refresh:
+      extra-refreshable: com.zaxxer.hikari.HikariDataSource
