--- a/msa-service-catalog/src/main/resources/application.yml
+++ b/msa-service-catalog/src/main/resources/application.yml
@@ -1,18 +1,10 @@
 server:
-  port: 8082
+  port: 8081
 
 spring:
   application:
     name: msa-service-catalog
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
-      path: /h2-console
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
+
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -29,6 +21,12 @@ eureka:
       defaultZone: http://127.0.0.1:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh, info, metrics, prometheus
 
 logging:
   level:
