--- a/msa-service-config/build.gradle
+++ b/msa-service-config/build.gradle
@@ -6,10 +6,13 @@ dependencies {
 
     //  # Spring Cloud
     implementation 'org.springframework.cloud:spring-cloud-config-server:3.0.2'
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.1'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.4.5'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp:3.0.1'
-    implementation 'org.springframework.boot:spring-boot-starter-test:2.4.5'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-test'
 
 
 }
