--- a/msa-service-config/src/main/resources/application.yml
+++ b/msa-service-config/src/main/resources/application.yml
@@ -4,14 +4,12 @@ server:
 spring:
   application:
     name: msa-service-config
+  eureka:
+    instance:
+      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-  profiles:
-    active: native
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/joneconsulting/spring-cloud-config
-
-
-  file:///path/to/your/config-repo
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh, info, metrics, prometheus
