--- a/msa-service-gateway/build.gradle
+++ b/msa-service-gateway/build.gradle
@@ -7,7 +7,11 @@ dependencies {
     //  # Spring Cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
 
     //  # ETC
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
