--- a/msa-service-order/src/main/resources/application.yml
+++ b/msa-service-order/src/main/resources/application.yml
@@ -1,18 +1,10 @@
 server:
-  port: 8083
+  port: 8081
 
 spring:
   application:
     name: msa-service-order
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
-      path: /h2-console
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
+
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -30,6 +22,12 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh, info, metrics, prometheus
+
 logging:
   level:
-    org.prj.catalog: DEBUG
+    org.prj.order: DEBUG
