--- a/msa-service-order/src/main/resources/bootstrap.yml
+++ b/msa-service-order/src/main/resources/bootstrap.yml
@@ -1,6 +1,7 @@
 spring:
+  profiles:
+    active: local
   cloud:
     config:
       uri: http://127.0.0.1:8888
       name: msa-service-order
-#      active: dev
