--- a/msa-service-catalog/src/main/resources/application.yml
+++ b/msa-service-catalog/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8083
 
 spring:
   application:
@@ -11,6 +11,7 @@ spring:
     show-sql: true
     generate-ddl: true
     database: h2
+    defer-datasource-initialization: true
 
 eureka:
   instance:
