--- a/msa-service-config/src/main/resources/bootstrap.yml
+++ b/msa-service-config/src/main/resources/bootstrap.yml
@@ -3,13 +3,10 @@ spring:
     name: msa-service-config
 
   profiles:
-    active: native
+    active: local #native
 
   cloud:
     config:
-      uri: http://127.0.0.1:8888
-      name: msa-service-config
-
       server:
 #        native:
 #          search-locations: file:///${user.home}/Vitamindragon/Learning/ToyProject-MSA/msa-environment-config
