--- a/msa-environment-config/msa-service-user-prod.yml
+++ b/msa-environment-config/msa-service-user-prod.yml
@@ -1,2 +1,6 @@
 greeting:
   message: Welcome to the Simple E-commerce.
+
+order-service:
+  #  url: http://127.0.0.1:8000/order-service/%s/orders
+  url: http://ORDER-SERVICE/order-service/%s/orders
