--- a/msa-service-core/build.gradle
+++ b/msa-service-core/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
 //  # ETC
     implementation 'org.modelmapper:modelmapper:2.4.4'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
