--- a/msa-service-order/build.gradle
+++ b/msa-service-order/build.gradle
@@ -2,7 +2,7 @@ dependencies {
 //  # Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 //  # Spring Cloud
