--- a/msa-service-order/src/main/resources/application.yml
+++ b/msa-service-order/src/main/resources/application.yml
@@ -5,12 +5,24 @@ spring:
   application:
     name: msa-service-order
 
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
   jpa:
     hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    generate-ddl: true
-    database: h2
+      ddl-auto: update
+  datasource:
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+#    password:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/mydb
+    username: root
+    password: 1234
 
 eureka:
   instance:
