--- a/msa-service-user/build.gradle
+++ b/msa-service-user/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 //  # Spring JPA 및 DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.mariadb.jdbc:mariadb-java-client'
 
 
