--- a/msa-service-catalog/build.gradle
+++ b/msa-service-catalog/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
 //  # Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
@@ -14,6 +13,7 @@ dependencies {
 
 //  # Spring JPA 및 DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.mariadb.jdbc:mariadb-java-client'
 
