--- a/msa-service-catalog/src/main/resources/application.yml
+++ b/msa-service-catalog/src/main/resources/application.yml
@@ -7,11 +7,12 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    generate-ddl: true
-    database: h2
-    defer-datasource-initialization: true
+      ddl-auto: none
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/mydb
+    username: root
+    password: 1234
 
 eureka:
   instance:
