--- a/msa-service-core/build.gradle
+++ b/msa-service-core/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
 //  # Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 //  # Spring Cloud
@@ -11,6 +10,7 @@ dependencies {
 
 //  # Spring JPA 및 DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.h2database:h2'
 
