--- a/msa-service-order/src/main/resources/application.yml
+++ b/msa-service-order/src/main/resources/application.yml
@@ -4,21 +4,10 @@ server:
 spring:
   application:
     name: msa-service-order
-
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
-      path: /h2-console
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
   datasource:
-#    driver-class-name: org.h2.Driver
-#    url: jdbc:h2:mem:testdb
-#    username: sa
-#    password:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/mydb
     username: root
